Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.


Changes for 1.0.4 [2005-07-04] #13388 "Xmas release patch 4"
============================================================

 o #13381 Added JMX support
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/admin.jmx.html
   - New configuration parameters
   - Changed admin interface to support operations besides propertiy getter/setter
     e.g. operation killClient() instead of getKillClient()
   - Changed getKillClient() to operation killClient()
   - Changed getKillSession() to operation killSession()
   - Added TopicHandler MBean control
   - Added TopicHandler eraseTopic and accessors administrative commands
   - SubjectInfo does subjectQueue.shutdown() now in its shutdown() instead of finalize()
   - RequestBroker.java: fixed internal login to be a session
   - Added MBean to CacheQueue implementation (not yet for RAM or JDBC)
   - CacheQueueInterceptorPlugin: Check for multiple shutdown added
   - CacheQueueInterceptorPlugin: JMX getters added

 o #13375 Bugfix FilePoller
   Added fix #13316 again, it was lost during #13325 patch

 o #13354 Windows C/C++ pthread update to 2.5.0 (http://sourceware.org/pthreads-win32/)
   Note: The library name has changed from pthreadVC.dll to pthreadVC2.dll

 o #13372 HelloWorldSubscribe
   - Added some more configuration parameters
   - Added fail safe subscribe handling (without persistent subscription)
   - Added re-subscribe on erase
   - Added extended file dump capabilities with locking


Changes for 1.0.3 [2005-05-16] #13349 "Xmas release patch 3"
============================================================
 
 o #13335 C and C++ client library
   Port to Microsoft VC++ 8 Express 2005 beta2

 o #13338 Java SOCKET protocol (server side):
   Changed to avoid DNS host name lookup on connect which could lead
   to blocking for a missing DNS server (reverse lookup) until timeout occurred.
